--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,9 @@
         <h1><a href="index.html">Engaging Students: Essays in Music Pedagogy, vol. 2</a></h1>
         <p></p>
 
-        <p class="view"><a href="toc.html">Table of Contents</a><br/>
-			<a href="bibliography.html">Bibliography</a><br/>
-			<a href="contributors.html">Contributors</a><br/>
+        <p class="view"><a href="{{ root_url }}/toc.html">Table of Contents</a><br/>
+			<a href="{{ root_url }}/bibliography.html">Bibliography</a><br/>
+			<a href="{{ root_url }}/contributors.html">Contributors</a><br/>
 
 
         <!--<ul>
