--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="index.html">Engaging Students: Essays in Music Pedagogy, vol. 2</a></h1>
+        <h1><a href="{{ root_url }}/index.html">Engaging Students: Essays in Music Pedagogy, vol. 2</a></h1>
         <p></p>
 
         <p class="view"><a href="{{ root_url }}/toc.html">Table of Contents</a><br/>
