--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Engaging Students: Essays in Music Pedagogy</title>
 
-    <link rel="stylesheet" href="{{ root_url }}/stylesheets/styles.css">
-    <link rel="stylesheet" href="{{ root_url }}/stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">
 <!--	<link href='http://fonts.googleapis.com/css?family=Fanwood+Text:400,400italic' rel='stylesheet' type='text/css'> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -16,12 +16,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ root_url }}/index.html">Engaging Students: Essays in Music Pedagogy, vol. 2</a></h1>
+        <h1><a href="{{ site.baseurl }}/index.html">Engaging Students: Essays in Music Pedagogy, vol. 2</a></h1>
         <p></p>
 
-        <p class="view"><a href="{{ root_url }}/toc.html">Table of Contents</a><br/>
-			<a href="{{ root_url }}/bibliography.html">Bibliography</a><br/>
-			<a href="{{ root_url }}/contributors.html">Contributors</a><br/>
+        <p class="view"><a href="{{ site.baseurl }}/toc.html">Table of Contents</a><br/>
+			<a href="{{ site.baseurl }}/bibliography.html">Bibliography</a><br/>
+			<a href="{{ site.baseurl }}/contributors.html">Contributors</a><br/>
 
 
         <!--<ul>
