--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Engaging Students: Essays in Music Pedagogy</title>
+    <title>Engineering the Future</title>
 
     <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ site.baseurl }}/index.html">Engaging Students: Essays in Music Pedagogy, vol. 2</a></h1>
+        <h1><a href="{{ site.baseurl }}/index.html">Engineering the Future</a></h1>
         <p></p>
 
         <p class="view"><a href="{{ site.baseurl }}/index.html">Table of Contents</a><br/>
