--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         <h1><a href="{{ site.baseurl }}/index.html">Engineering the Future</a></h1>
         <p></p>
 
-        <p class="view"><a href="{{ site.baseurl }}/index.html">Table of Contents</a><br/>
+        <p class="view"><a href="{{ site.baseurl }}">Table of Contents</a><br/>
 			<a href="{{ site.baseurl }}/bibliography.html">Bibliography</a><br/>
 			<a href="{{ site.baseurl }}/contributors.html">Contributors</a><br/>
 
