--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,16 +19,10 @@
         <h1><a href="{{ site.baseurl }}/index.html">Engineering the Future</a></h1>
         <p></p>
 
-        <p class="view"><a href="{{ site.baseurl }}">Table of Contents</a><br/>
+        <p class="view"><a href="{{ site.baseurl }}/index.html">Table of Contents</a><br/>
 			<a href="{{ site.baseurl }}/bibliography.html">Bibliography</a><br/>
 			<a href="{{ site.baseurl }}/contributors.html">Contributors</a><br/>
 
-
-        <!--<ul>
-          <li><a href="https://github.com/flipcamp/EngagingStudents/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/flipcamp/EngagingStudents/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/flipcamp/EngagingStudents">View On <strong>GitHub</strong></a></li>
-        </ul>-->
       </header>
 
       <section>  
@@ -37,20 +31,9 @@
   
       <footer>
 		<p style="line-height: 80%"><small><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />All contents on this site, unless otherwise stated, are copyright 2014 by the <i>Engaging Students</i> editorial board and licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</small></p>
-        <p style="line-height: 80%"><small>This is a <a href="https://github.com/flipcamp">FlipCamp</a> project hosted on GitHub Pages. Visit the <a href="https://github.com/flipcamp/EngagingStudents2">project page</a> to fork.</small></p>
+        <p style="line-height: 80%"><small>This is a project hosted on GitHub Pages. Visit the <a href="https://github.com/lguariento/engineering_new">project page</a> to fork.</small></p>
         <p style="line-height: 80%"><small>Design based on a GitHub Pages theme by <a href="https://github.com/orderedlist">orderedlist</a>.</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-39541792-3', 'flipcamp.org');
-	  ga('send', 'pageview');
-
-	</script>    
   </body>
 </html>
