--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Engaging Students: Essays in Music Pedagogy</title>
 
-    <link rel="stylesheet" href="{{ site.url }}/stylesheets/styles.css">
-    <link rel="stylesheet" href="{{ site.url }}/stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="http://flipcamp.org/engagingstudents2/stylesheets/styles.css">
+    <link rel="stylesheet" href="http://flipcamp.org/engagingstudents2/stylesheets/pygment_trac.css">
 <!--	<link href='http://fonts.googleapis.com/css?family=Fanwood+Text:400,400italic' rel='stylesheet' type='text/css'> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -19,9 +19,9 @@
         <h1><a href="{{ site.url }}/index.html">Engaging Students: Essays in Music Pedagogy, vol. 2</a></h1>
         <p></p>
 
-        <p class="view"><a href="{{ site.url }}/index.html">Table of Contents</a><br/>
-			<a href="{{ site.url }}/bibliography.html">Bibliography</a><br/>
-			<a href="{{ site.url }}/contributors.html">Contributors</a><br/>
+        <p class="view"><a href="http://flipcamp.org/engagingstudents2/index.html">Table of Contents</a><br/>
+			<a href="http://flipcamp.org/engagingstudents2/bibliography.html">Bibliography</a><br/>
+			<a href="http://flipcamp.org/engagingstudents2/contributors.html">Contributors</a><br/>
 
 
         <!--<ul>
