--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Engaging Students: Essays in Music Pedagogy</title>
 
-    <link rel="stylesheet" href="http://flipcamp.org/engagingstudents2/stylesheets/styles.css">
-    <link rel="stylesheet" href="http://flipcamp.org/engagingstudents2/stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">
 <!--	<link href='http://fonts.googleapis.com/css?family=Fanwood+Text:400,400italic' rel='stylesheet' type='text/css'> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -16,12 +16,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ site.url }}/index.html">Engaging Students: Essays in Music Pedagogy, vol. 2</a></h1>
+        <h1><a href="{{ site.baseurl }}/index.html">Engaging Students: Essays in Music Pedagogy, vol. 2</a></h1>
         <p></p>
 
-        <p class="view"><a href="http://flipcamp.org/engagingstudents2/index.html">Table of Contents</a><br/>
-			<a href="http://flipcamp.org/engagingstudents2/bibliography.html">Bibliography</a><br/>
-			<a href="http://flipcamp.org/engagingstudents2/contributors.html">Contributors</a><br/>
+        <p class="view"><a href="{{ site.baseurl }}/index.html">Table of Contents</a><br/>
+			<a href="{{ site.baseurl }}/bibliography.html">Bibliography</a><br/>
+			<a href="{{ site.baseurl }}/contributors.html">Contributors</a><br/>
 
 
         <!--<ul>
@@ -41,7 +41,7 @@
         <p style="line-height: 80%"><small>Design based on a GitHub Pages theme by <a href="https://github.com/orderedlist">orderedlist</a>.</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="{{ site.baseurl }}/javascripts/scale.fix.js"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
